--- a/Assessment Tests/cams_final_exam_sim.html
+++ b/Assessment Tests/cams_final_exam_sim.html
@@ -13,6 +13,12 @@
 *{box-sizing:border-box}
 body{margin:0;font-family:Inter, ui-sans-serif, system-ui, Segoe UI, Roboto, Arial; background:linear-gradient(180deg,#0b1022,#0f172a 40%,#0b1022); color:var(--ink);}
 header{position:sticky;top:0;z-index:5; backdrop-filter: blur(10px); background:rgba(255,255,255,.03); border-bottom:1px solid rgba(255,255,255,.06); padding:16px}
+.header-content{display:flex;align-items:center;gap:16px;max-width:1100px;margin:0 auto}
+.header-text{flex:1;text-align:center}
+.back-button{display:flex;align-items:center;gap:8px;background:rgba(255,255,255,.08);border:1px solid rgba(255,255,255,.12);color:var(--ink);padding:10px 16px;border-radius:12px;font-size:14px;font-weight:600;cursor:pointer;transition:.2s ease;text-decoration:none;white-space:nowrap}
+.back-button:hover{background:rgba(255,255,255,.12);border-color:var(--accent);transform:translateX(-2px)}
+.back-button:active{transform:translateX(0)}
+.back-button svg{flex-shrink:0}
 h1{margin:0;font-weight:800;font-size:clamp(22px,3vw,30px)}
 .sub{color:var(--muted);font-size:14px;margin-top:4px}
 main{max-width:1100px;margin:20px auto;padding:0 16px 120px}
@@ -56,8 +62,18 @@ hr.sep{border:none;height:1px;background:linear-gradient(90deg,transparent,rgba(
 </head>
 <body>
 <header>
-  <h1>CAMS Final Exam Simulator — Weighted Distribution</h1>
-  <div class="sub">Simulates the real exam with the distribution you provided. No instant feedback; full review at the end. Time limit: 3h30m. Keys: <span class="kbd">1–4</span> answer, <span class="kbd">N</span> next, <span class="kbd">P</span> prev.</div>
+  <div class="header-content">
+    <button class="back-button" onclick="goBack()" title="Go Back">
+      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M19 12H5M12 19l-7-7 7-7"/>
+      </svg>
+      Back
+    </button>
+    <div class="header-text">
+      <h1>CAMS Final Exam Simulator — Weighted Distribution</h1>
+      <div class="sub">Simulates the real exam with the distribution you provided. No instant feedback; full review at the end. Time limit: 3h30m. Keys: <span class="kbd">1–4</span> answer, <span class="kbd">N</span> next, <span class="kbd">P</span> prev.</div>
+    </div>
+  </div>
 </header>
 
 <main>
@@ -572,6 +588,15 @@ document.addEventListener('keydown', (e)=>{
   } else if(e.key.toLowerCase()==='n'){ nav(1); }
   else if(e.key.toLowerCase()==='p'){ nav(-1); }
 });
+
+// Back button functionality
+function goBack() {
+  if (window.history.length > 1) {
+    window.history.back();
+  } else {
+    window.location.href = '../index.html';
+  }
+}
 
 </script>
 </body>
