--- a/Assessment Tests/cams_quiz.html
+++ b/Assessment Tests/cams_quiz.html
@@ -30,6 +30,12 @@
       position:sticky;top:0;backdrop-filter: blur(10px);
       z-index:5;
     }
+    .header-content{display:flex;align-items:center;gap:16px;max-width:1000px;margin:0 auto}
+    .header-text{flex:1;text-align:center}
+    .back-button{display:flex;align-items:center;gap:8px;background:rgba(255,255,255,.08);border:1px solid rgba(255,255,255,.12);color:var(--ink);padding:10px 16px;border-radius:12px;font-size:14px;font-weight:600;cursor:pointer;transition:.2s ease;text-decoration:none;white-space:nowrap}
+    .back-button:hover{background:rgba(255,255,255,.12);border-color:var(--accent);transform:translateX(-2px)}
+    .back-button:active{transform:translateX(0)}
+    .back-button svg{flex-shrink:0}
     h1{margin:0;font-weight:800;letter-spacing:.3px;font-size:clamp(22px,3vw,30px)}
     .sub{color:var(--muted);font-size:14px;margin-top:6px}
     main{max-width:1000px;margin:24px auto;padding:0 16px 80px}
@@ -100,8 +106,18 @@
 </head>
 <body>
   <header>
-    <h1>CAMS Topic Drills — Interactive Practice</h1>
-    <div class="sub">Short, focused quizzes by topic. Instant feedback + explanations. Built for 2‑hour/day prep.</div>
+    <div class="header-content">
+      <button class="back-button" onclick="goBack()" title="Go Back">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M19 12H5M12 19l-7-7 7-7"/>
+        </svg>
+        Back
+      </button>
+      <div class="header-text">
+        <h1>CAMS Topic Drills — Interactive Practice</h1>
+        <div class="sub">Short, focused quizzes by topic. Instant feedback + explanations. Built for 2‑hour/day prep.</div>
+      </div>
+    </div>
   </header>
 
   <main>
@@ -926,6 +942,15 @@ document.addEventListener('keydown', (e)=>{
   } else if(e.key.toLowerCase()==='n'){ nav(1); }
   else if(e.key.toLowerCase()==='p'){ nav(-1); }
 });
+
+// Back button functionality
+function goBack() {
+  if (window.history.length > 1) {
+    window.history.back();
+  } else {
+    window.location.href = '../index.html';
+  }
+}
 </script>
 </body>
 </html>
