--- a/Test1/index.html
+++ b/Test1/index.html
@@ -38,7 +38,50 @@
             background: rgba(255, 255, 255, 0.03);
             border-bottom: 1px solid rgba(255, 255, 255, 0.06);
             padding: 20px 16px;
+        }
+
+        .header-content {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .header-text {
+            flex: 1;
             text-align: center;
+        }
+
+        .back-button {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            background: rgba(255, 255, 255, 0.08);
+            border: 1px solid rgba(255, 255, 255, 0.12);
+            color: var(--ink);
+            padding: 10px 16px;
+            border-radius: 12px;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            text-decoration: none;
+            white-space: nowrap;
+        }
+
+        .back-button:hover {
+            background: rgba(255, 255, 255, 0.12);
+            border-color: var(--accent);
+            transform: translateX(-2px);
+        }
+
+        .back-button:active {
+            transform: translateX(0);
+        }
+
+        .back-button svg {
+            flex-shrink: 0;
         }
 
         h1 {
@@ -209,8 +252,18 @@
     <div class="progress-bar" id="progressBar"></div>
     
     <header>
-        <h1>CAMS Legacy Test Questions</h1>
-        <p class="subtitle">120 Random Questions • Multiple Choice Format</p>
+        <div class="header-content">
+            <button class="back-button" onclick="goBack()" title="Go Back">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M19 12H5M12 19l-7-7 7-7"/>
+                </svg>
+                Back
+            </button>
+            <div class="header-text">
+                <h1>CAMS Legacy Test Questions</h1>
+                <p class="subtitle">120 Random Questions • Multiple Choice Format</p>
+            </div>
+        </div>
     </header>
 
     <main id="mainContent">
@@ -223,5 +276,16 @@
 
     <script src="js/data.js"></script>
     <script src="js/index.js"></script>
+    
+    <script>
+        // Back button functionality
+        function goBack() {
+            if (window.history.length > 1) {
+                window.history.back();
+            } else {
+                window.location.href = '../index.html';
+            }
+        }
+    </script>
 </body>
 </html>
