--- a/index.html
+++ b/index.html
@@ -46,7 +46,50 @@
             background: rgba(255, 255, 255, 0.03);
             border-bottom: 1px solid rgba(255, 255, 255, 0.06);
             padding: 20px 16px;
+        }
+
+        .header-content {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .header-text {
+            flex: 1;
             text-align: center;
+        }
+
+        .back-button {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            background: rgba(255, 255, 255, 0.08);
+            border: 1px solid rgba(255, 255, 255, 0.12);
+            color: var(--ink);
+            padding: 10px 16px;
+            border-radius: 12px;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            text-decoration: none;
+            white-space: nowrap;
+        }
+
+        .back-button:hover {
+            background: rgba(255, 255, 255, 0.12);
+            border-color: var(--accent);
+            transform: translateX(-2px);
+        }
+
+        .back-button:active {
+            transform: translateX(0);
+        }
+
+        .back-button svg {
+            flex-shrink: 0;
         }
 
         h1 {
@@ -291,8 +334,18 @@
 </head>
 <body>
     <header>
-        <h1>CAMS Quiz Launcher</h1>
-        <p class="subtitle">Comprehensive Anti-Money Laundering Study Tools</p>
+        <div class="header-content">
+            <button class="back-button" onclick="goBack()" title="Go Back">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M19 12H5M12 19l-7-7 7-7"/>
+                </svg>
+                Back
+            </button>
+            <div class="header-text">
+                <h1>CAMS Quiz Launcher</h1>
+                <p class="subtitle">Comprehensive Anti-Money Laundering Study Tools</p>
+            </div>
+        </div>
     </header>
 
     <main>
@@ -523,6 +576,16 @@
                 this.style.transform = '';
             });
         });
+
+        // Back button functionality
+        function goBack() {
+            if (window.history.length > 1) {
+                window.history.back();
+            } else {
+                // If no history, redirect to a safe fallback
+                window.location.href = '/';
+            }
+        }
     </script>
 
 <script>
