Fix path references for Test1 directory
- Updated index.html to use correct 'Test1/index.html' path
- Fixed both onclick handler and href link for legacy test questions
- Ensures proper navigation to the Test1 directory

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                 </div>
             </div>
 
-            <div class="quiz-card" onclick="launchQuiz('Test Questions 1/index.html')">
+            <div class="quiz-card" onclick="launchQuiz('Test1/index.html')">
                 <div class="quiz-type practice">LEGACY</div>
                 <div class="quiz-header">
                     <h3 class="quiz-title">Legacy Test Questions</h3>
@@ -497,7 +497,7 @@
                             <span class="stat-value">Legacy</span> Format
                         </div>
                     </div>
-                    <a href="Test Questions 1/index.html" class="quiz-button">Start Test</a>
+                    <a href="Test1/index.html" class="quiz-button">Start Test</a>
                 </div>
             </div>
         </div>
